# apriltag_dataset

./: .gitignore  ATTRIBUTION.md  README.md  index.html  main.py  pyproject.toml
bench/: CMakeLists.txt  README.md  bench_apriltag.c  plot_results.py
data/: manifest.json
data/detections/: 0006f5b0a06c_PC000002_MOV-0336_jpg_rf_0976ea6a26daca94e2da7387edb7264f.json  000a68b257fc_REEFSCAPE_Week_1_Event_Predictions___FRC_Forecast_frame_0452.json  001642c481ec_PC000002_MOV-0017_jpg_rf_104a86646a4d3177cbf7796e07517b70.json  0024c5f610ab_gdrive_1OFEerTz_puEJG8C3M6D15g2TPNTZb00F_frame_000885.json  0038a0fc6b45_3173_Robot_Reveal_2024_-_KnightShade_frame_002400.json  003a499ba0f6_FRC_Team_8806_-_2025_Robot_Reveal_frame_001440.json  0041a0b02777_M11_-_Galileo_-_190_POV_frame_001140.json  0042121ff5ef_dji_mimo_20260216_125718_20260216135719_1771268187552_video_.json  0047d6aef581_2025_Field_Tour_Video__Barge_frame_000295.json  0051185f4ced_FRC_6328_2026_Rebuilt_Reveal_DARWIN_frame_001833.json  0053226788b5_m2-res_388p_frame_000000.json  0055c68f0e95_GreenBlitz_4590_2026_Robot_Reveal_-_Whopper_frame_001357.json  005d521bee70_Aion_2026_Team_3161_Robot_Reveal_frame_000480.json  005d7472c482_FTC_AprilTags__Get_Distance___Angle__Standard_Webcam__frame_.json  005ea53419ca_Half_Hollow_Hills_Invitational_Playoff_Match_9_2025_frame_00.json  006f41515a80_WPI_2025_District_Event_Qual_Match_48_POV_frame_005355.json  006fa35461e2_WALL_E___FRC9501_-_2026_Robot_Reveal_frame_003480.json  007076cde4b3_gdrive_1OFEerTz_puEJG8C3M6D15g2TPNTZb00F_frame_002596.json  0077b54cf13f_WCP_2026_-_Competitive_Concept__Big_Dumper__frame_004200.json  007e8631b411_2026_FRC_-_Hemlock_s_Gray_Matter_Robot_Reveal__Athena_frame_.json  007f982b2c46_38_Robot_Reveals____FRC_Premiere_Night___REEFSCAPE_25___Bonu.json  008ddb9dcb81_PC000015_MOV-0002_jpg_rf_87f89909bf2d08a7eef6635182a0e59f.json  0090996fcfc2_5348_Charger_Robotics_2024_Robot_Reveal_-__Admiral__frame_00.json  009519c9eb3a_PC000001_MOV-0255_jpg_rf_298918fc05fc0990e61256fc951b69d6.json  00956d937c81_2026_Robot_Reveal-_FRC_3990_Tech_For_Kids_frame_003720.json  (+9980 more)
scripts/: generate_synthetic.py
(+11 files in other folders)
